--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,9 @@
 	path = odoo-12-linggajati-module
 	url = git@github.com:abuabdirohman4/odoo-12-linggajati-module.git
 	branch = main
+[submodule "odoo-16-experiment"]
+	path = odoo-16-experiment
+	url = git@github.com:abuabdirohman4/odoo-16-experiment.git
+[submodule "odoo-13-technical-training"]
+	path = odoo-13-technical-training
+	url = git@github.com:abuabdirohman4/odoo-13-technical-training.git
