--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 [submodule "odoo-13-technical-training"]
 	path = odoo-13-technical-training
 	url = git@github.com:abuabdirohman4/odoo-13-technical-training.git
+[submodule "odoo-docker-compose"]
+	path = odoo-docker-compose
+	url = https://github.com/abuabdirohman4/odoo-docker-compose
